2024-06-03T01:00:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9342622991 # 315
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-03
* notice: last 14d: unq all: 4 18
* notice: prev accum: outdated-unq outdated-all / unq all: 917 1667 / 932 1686
* notice: next accum: outdated-unq outdated-all / unq all: 918 1669 / 933 1687
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-05-19] / [2024-06-02]

2024-06-02T01:03:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9334485282 # 314
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-02
* notice: last 14d: unq all: 4 19
* notice: prev accum: outdated-unq outdated-all / unq all: 916 1665 / 931 1685
* notice: next accum: outdated-unq outdated-all / unq all: 917 1667 / 932 1686
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-05-18] / [2024-06-01]

2024-06-01T01:03:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9326273839 # 313
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-01
* notice: last 14d: unq all: 4 20
* notice: prev accum: outdated-unq outdated-all / unq all: 915 1663 / 930 1684
* notice: next accum: outdated-unq outdated-all / unq all: 916 1665 / 931 1685
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-05-17] / [2024-05-31]

2024-05-31T01:00:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9311275391 # 312