@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2024-06-03T01:00:46Z",
-  "count_outdated" : 1669,
-  "uniques_outdated" : 918,
-  "count" : 1687,
-  "uniques" : 933,
+  "timestamp" : "2024-06-04T01:00:22Z",
+  "count_outdated" : 1673,
+  "uniques_outdated" : 921,
+  "count" : 1689,
+  "uniques" : 935,
   "clones" : [
-    {
-      "timestamp": "2024-05-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
-      "timestamp": "2024-05-21T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-05-22T00:00:00Z",
       "count": 3,
@@ -130,6 +112,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-06-03T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
