@@ -1,17 +1,7 @@
 {
-  "count": 18,
+  "count": 16,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2024-05-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2024-05-21T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-05-22T00:00:00Z",
       "count": 3,
@@ -71,6 +61,11 @@
       "timestamp": "2024-06-02T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2024-06-03T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
