@@ -1,3 +1,12 @@
+2024-06-04T01:00:22Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9359470367 # 316
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-04
+* notice: last 14d: unq all: 4 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 918 1669 / 933 1687
+* notice: next accum: outdated-unq outdated-all / unq all: 921 1673 / 935 1689
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2024-05-20 2024-05-21] / [2024-06-03]
+
 2024-06-03T01:00:46Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9342622991 # 315
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-03
